--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,18 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<craftbukkit.version>1.9.4-R0.1</craftbukkit.version>
 	</properties>
+	
   	<repositories>
   		<repository>
   			<id>spigot-repo</id>
 			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
   		</repository>
+  		<repository>
+			<id>vault-repo</id>
+			<url>http://nexus.theyeticave.net/content/repositories/pub_releases/</url>
+		</repository>
   	</repositories>
+  	
   	<dependencies>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
@@ -23,7 +29,14 @@
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.milkbowl.vault</groupId>
+			<artifactId>VaultAPI</artifactId>
+			<version>1.5</version>
+			<scope>provided</scope>
+		</dependency>
  	</dependencies>
+ 	
   	<build>	
 		<finalName>BedHomes.${project.version}</finalName>
 		<sourceDirectory>${basedir}/src/</sourceDirectory>
