--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,10 @@
   	<groupId>org.jabelpeeps</groupId>
   	<artifactId>BedHomes</artifactId>
 	<packaging>jar</packaging>
-  	<version>0.1.build#${env.BUILD_NUMBER}</version>
+  	<version>0.2.build#${env.BUILD_NUMBER}</version>
   	<description>provide a simple /bed command</description>
   	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<craftbukkit.version>1.9.4-R0.1</craftbukkit.version>
 	</properties>
 	
   	<repositories>
@@ -25,7 +24,7 @@
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>${craftbukkit.version}-SNAPSHOT</version>
+			<version>LATEST</version>
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
