--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>LATEST</version>
-			<type>jar</type>
+			<version>1.12-R0.1-SNAPSHOT</version>
+	        <type>jar</type>
 			<scope>provided</scope>
 			<exclusions>
                 <exclusion>    
