--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,11 @@
 name: BedHomes
 main: org.jabelpeeps.bedhomes.BedHomes
-version: ${project.version}
+version: 1.0.0
 author: Jabelpeeps
 softdepend: [Vault]
+api-version: 1.17
 
 commands:
-  home:
+  bed:
     description: Returns you to your Survival bed.
     usage: /bed
